--- a/personalportfolio.html
+++ b/personalportfolio.html
@@ -4,32 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="personalportfolio.css" />
     
   </head>
   <body>
-    <nav>
-      <div class="logo">
-        <h4>The NAV</h4>
+    <header class="fixed-top">
+      <nav>
+        <div class="logo">
+          <h4>The NAV</h4>
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">about us</a></li>
+          <li><a href="#">skills</a></li>
+          <li><a href="#">services</a></li>
+          <li><a href="#">blogs</a></li>
+          <li><a href="#">projects</a></li>
+          <li><a href="#">contact us</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
+  </header>
+
+
+    <section id="hero">
+      <div class="container" style="background-color: red; ">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore cumque debitis reprehenderit labore ad ullam incidunt alias cum esse tempore! Harum eaque eligendi asperiores debitis odit? Voluptate iusto repellendus architecto.
       </div>
-      <ul class="nav-links">
-        <li><a href="#">about us</a></li>
-        <li><a href="#">skills</a></li>
-        <li><a href="#">services</a></li>
-        <li><a href="#">blogs</a></li>
-        <li><a href="#">projects</a></li>
-        <li><a href="#">contact us</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
-    </nav>
+
+      this is my landing page
+    </section>
     <script src="personalportfolio.js"></script>
   </body>
 </html>
