--- a/personalportfolio.html
+++ b/personalportfolio.html
@@ -32,13 +32,38 @@
   </header>
 
 
-    <section id="hero">
-      <div class="container" style="background-color: red; ">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore cumque debitis reprehenderit labore ad ullam incidunt alias cum esse tempore! Harum eaque eligendi asperiores debitis odit? Voluptate iusto repellendus architecto.
+    <section id="hero" class="d-flex align-items-center">
+      <div class="container">
+        <div id="main">
+          <div class="content">
+            <h5>Hello</h5>
+            <br>
+            <h1>I'm Shubham</h1>
+            <h3>Freelancer web designer <br> &amp; Developer </h3>
+            <button type="button" class="btn">HIRE ME</button>
+          </div>
+        </div>
+        <div>
+          <img src="man.png" alt="main" >
+        </div>
+        
       </div>
-
-      this is my landing page
     </section>
+    
     <script src="personalportfolio.js"></script>
+    <script></script>
+     function resize Function(){ console.clear(); var Height = window.innerHeight; console.log('Inner Height : ' + iHeight);
+
+      var oHeight = window.outerHeight; console.log('Outer Height : ' + oHeight);   
   </body>
 </html>
+
+
+
+
+
+
+<!--
+
+
+          -->
