--- a/personalportfolio.html
+++ b/personalportfolio.html
@@ -34,7 +34,6 @@
         <ul class="nav-links">
           <li><a href="#">About Us</a></li>
           <li><a href="#">Skills</a></li>
-          <li><a href="#">Services</a></li>
           <li><a href="#">Blogs</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Contact Us</a></li>
@@ -180,22 +179,115 @@
     <section id="blogs">
       <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
+          <div class="swiper-slide cardo">
             <div class="imgbx">
-              <img
-                src="python project ideas.png"
-                alt=""
-                height="300px"
-                width="300px"
-              />
+              <img src="python project ideas.png"/>
             </div>
-            <div class="details">
-              <p>python project ideas</p>
-              <button type="button" class="wrapper btn">READ MORE</button>
+            <div>
+              <p class="details-o">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-o">READ MORE</button>
+              </div>
+          </div>
+          <div class="swiper-slide carde">
+            <div class="imgbx">
+              <img src="js project ideas.png"/>
+            </div>
+            <div>
+              <p class="details-e">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-e">READ MORE</button>
             </div>
           </div>
-          <div class="swiper-slide"></div>
-          <div class="swiper-slide"></div>
+
+
+
+          <div class="swiper-slide cardo">
+            <div class="imgbx">
+              <img src="flutter ideas.png"/>
+            </div>
+            <div>
+              <p class="details-o">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-o">READ MORE</button>
+              </div>
+          </div>
+          <div class="swiper-slide carde">
+            <div class="imgbx">
+              <img src="node js dev.jpg"/>
+            </div>
+            <div>
+              <p class="details-e">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-e">READ MORE</button>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="swiper-slide cardo">
+            <div class="imgbx">
+              <img src="angularjs project ideas.png"/>
+            </div>
+            <div>
+              <p class="details-o">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-o">READ MORE</button>
+              </div>
+          </div>
+          <div class="swiper-slide carde">
+            <div class="imgbx">
+              <img src="react native app ideas.png"/>
+            </div>
+            <div>
+              <p class="details-e">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-e">READ MORE</button>
+            </div>
+          </div>
+
+
+
+
+
+          <div class="swiper-slide cardo">
+            <div class="imgbx">
+              <img src="js project ideas.png"/>
+            </div>
+            <div>
+              <p class="details-o">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-o">READ MORE</button>
+              </div>
+          </div>
+          <div class="swiper-slide carde">
+            <div class="imgbx">
+              <img src="vue js.png"/>
+            </div>
+            <div>
+              <p class="details-e">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-e">READ MORE</button>
+            </div>
+          </div>
+
+
+
+
+          <div class="swiper-slide cardo">
+            <div class="imgbx">
+              <img src="django project ideas.png"/>
+            </div>
+            <div>
+              <p class="details-o">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-o">READ MORE</button>
+              </div>
+          </div>
+          <div class="swiper-slide carde">
+            <div class="imgbx">
+              <img src="node js dev.jpg"/>
+            </div>
+            <div>
+              <p class="details-e">PYTHON PROJECTS IDEAS</p>
+              <button type="button" class="btn read-more-e">READ MORE</button>
+            </div>
+          </div>
+          
+          
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
