--- a/personalportfolio.html
+++ b/personalportfolio.html
@@ -185,7 +185,7 @@
             </div>
             <div>
               <p class="details-o">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-o">READ MORE</button>
+              <button type="button" class="btn read-more-o">READ MORE <i class="fas fa-arrow-right"></i></button>
               </div>
           </div>
           <div class="swiper-slide carde">
@@ -194,7 +194,7 @@
             </div>
             <div>
               <p class="details-e">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-e">READ MORE</button>
+              <button type="button" class="btn read-more-e">READ MORE <i class="fas fa-arrow-right"></i></button>
             </div>
           </div>
 
@@ -206,7 +206,7 @@
             </div>
             <div>
               <p class="details-o">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-o">READ MORE</button>
+              <button type="button" class="btn read-more-o">READ MORE <i class="fas fa-arrow-right"></i></button>
               </div>
           </div>
           <div class="swiper-slide carde">
@@ -215,7 +215,7 @@
             </div>
             <div>
               <p class="details-e">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-e">READ MORE</button>
+              <button type="button" class="btn read-more-e">READ MORE <i class="fas fa-arrow-right"></i></button>
             </div>
           </div>
 
@@ -229,7 +229,7 @@
             </div>
             <div>
               <p class="details-o">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-o">READ MORE</button>
+              <button type="button" class="btn read-more-o">READ MORE <i class="fas fa-arrow-right"></i></button>
               </div>
           </div>
           <div class="swiper-slide carde">
@@ -238,7 +238,7 @@
             </div>
             <div>
               <p class="details-e">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-e">READ MORE</button>
+              <button type="button" class="btn read-more-e">READ MORE <i class="fas fa-arrow-right"></i></button>
             </div>
           </div>
 
@@ -252,7 +252,7 @@
             </div>
             <div>
               <p class="details-o">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-o">READ MORE</button>
+              <button type="button" class="btn read-more-o">READ MORE <i class="fas fa-arrow-right"></i></button>
               </div>
           </div>
           <div class="swiper-slide carde">
@@ -261,7 +261,7 @@
             </div>
             <div>
               <p class="details-e">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-e">READ MORE</button>
+              <button type="button" class="btn read-more-e">READ MORE <i class="fas fa-arrow-right"></i></button>
             </div>
           </div>
 
@@ -274,7 +274,7 @@
             </div>
             <div>
               <p class="details-o">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-o">READ MORE</button>
+              <button type="button" class="btn read-more-o">READ MORE <i class="fas fa-arrow-right"></i></button>
               </div>
           </div>
           <div class="swiper-slide carde">
@@ -283,7 +283,7 @@
             </div>
             <div>
               <p class="details-e">PYTHON PROJECTS IDEAS</p>
-              <button type="button" class="btn read-more-e">READ MORE</button>
+              <button type="button" class="btn read-more-e">READ MORE <i class="fas fa-arrow-right"></i></button>
             </div>
           </div>
           
@@ -293,6 +293,172 @@
         <div class="swiper-pagination"></div>
       </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Portfolio</h2>
+          <p>Check out our beautifull portfolio</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">App</li>
+              <li data-filter=".filter-card">Card</li>
+              <li data-filter=".filter-web">Web</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>App 1</h4>
+                <p>App</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Web 3</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>App 2</h4>
+                <p>App</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Card 2</h4>
+                <p>Card</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Web 2</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>App 3</h4>
+                <p>App</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Card 1</h4>
+                <p>Card</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Card 3</h4>
+                <p>Card</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="js project ideas.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-plus-circle"></i></a>
+                <a href="#" title="More Details"><i class="icofont-link"></i></a>
+              </div>
+              <div class="portfolio-info">
+                <h4>Web 3</h4>
+                <p>Web</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Portfolio Section -->
+
 
     <!--    ======================================= JAVASCRIPT=========================-->
 
