--- a/personalportfolio.html
+++ b/personalportfolio.html
@@ -65,6 +65,11 @@
         </div>
       </div>
     </section>
+
+<!--  ================================ABOUT ME   ===============================-->
+
+
+
     <section id="about-me" style="margin-top: 10vh;">
       <div class="container">
         <div class="row">
@@ -84,13 +89,13 @@
             </div>
             <div id="info">
               <p><strong>FULL NAME:</strong>MR.SHUBHAM HULE</p>
-              <br />
+              <hr>
               <p><strong>AGE:</strong>18</p>
-              <br />
+              <hr>
               <p><strong>CONTACT NO.:</strong>9653251316</p>
-              <br />
-              <p><strong>EMAIL ID</strong>shubhamhule9821932895@gmail.com</p>
-              <br />
+              <hr>
+              <p><strong>EMAIL ID</strong>shubham.hule@spit.ac.in</p>
+              <hr> 
               <button type="button" class="btn" id="resume">
                 DOWNLOAD RESUME
               </button>
@@ -460,14 +465,38 @@
     </section><!-- End Portfolio Section -->
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--   =======================  contact us  =================-->
+
+    <section id="contact">
+
+    </section>
     <!--    ======================================= JAVASCRIPT=========================-->
 
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="personalportfolio.js"></script>
-    <script
-      src="https://kit.fontawesome.com/f0932be404.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/f0932be404.js" crossorigin="anonymous"></script>
+    <script src="jquery/jquery.min.js"></script>
+    <script src="jquery.easing/"></script>
   </body>
 </html>
